Add Login Functionality 	modified:   .zfproject.xml    - New Form Added 	modified:   application/configs/application.ini    - Database settings Added 	modified:   application/controllers/AuthController.php    - Defined login Action 	new file:   application/forms/Login.php    - Added login Form 	modified:   application/layouts/scripts/layout.phtml 	modified:   application/views/scripts/auth/login.phtml    - Called login form

--- a/Ready2Serve/application/configs/application.ini
+++ b/Ready2Serve/application/configs/application.ini
@@ -10,6 +10,7 @@ resources.frontController.params.displayExceptions = 0
 resources.view[] =
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
+
 [staging : production]
 
 [testing : production]
@@ -20,3 +21,10 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
+resources.db.adapter = "PDO_MYSQL"
+resources.db.params.charset = "utf8"
+resources.db.params.dbname = "Ready2ServeDB"
+resources.db.params.host = "localhost"
+resources.db.params.username = "root"
+resources.db.params.password = "coeus123"
